bug fix for target protein count

--- a/src/eda.ipynb
+++ b/src/eda.ipynb
@@ -342,8 +342,7 @@
     "\n",
     "    # 4. Green channel antibody diversity\n",
     "    green_df = df_merged[df_merged[\"channel\"] == \"green\"]\n",
-    "    unique_green = sorted(set(green_df[\"antibody_hpa_id\"].dropna().tolist() + \n",
-    "                              green_df[\"antibody_name\"].dropna().tolist()))\n",
+    "    unique_green = sorted(set(green_df[\"antibody_hpa_id\"].dropna().tolist()))\n",
     "    print(f\"\\n🟩 Number of unique antibodies in green channel (protein target): {len(unique_green)}\", flush=True)\n",
     "\n",
     "    # 5. Red, Blue, Yellow antibody/stain names with icons\n",
@@ -425,6 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: Remove once image downloader integrated\n",
     "save_image_gene_node_attributes(df_merged, base_output_dir=BASE_PATH)"
    ]
   },
