--- a/src/eda.ipynb
+++ b/src/eda.ipynb
@@ -410,22 +410,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27fc515c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_summary_report(df_merged)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "038d89b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Remove once image downloader integrated\n",
     "save_image_gene_node_attributes(df_merged, base_output_dir=BASE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27fc515c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_summary_report(df_merged)"
    ]
   },
   {
@@ -446,7 +446,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cm4ai-if",
+   "display_name": "cm4ai-if-tutorial",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
