--- a/src/generate_graph.ipynb
+++ b/src/generate_graph.ipynb
@@ -67,14 +67,12 @@
     "\n",
     "    print(f\"🔍 Processing treatment: {treatment}\")\n",
     "    df = pd.read_csv(emb_file, sep=\"\\t\")\n",
-    "    df.index.name = \"gene\"\n",
-    "    df.reset_index(inplace=True)\n",
-    "    df = df[df[\"gene\"].notna() & (df[\"gene\"] != \"NEGATIVE\")]\n",
+    "    df = df[df[\"id\"].notna() & (df[\"id\"] != \"NEGATIVE\")]\n",
     "    embedding_cols = df.columns[1:]\n",
     "    df[embedding_cols] = df[embedding_cols].apply(pd.to_numeric)\n",
     "\n",
     "    # Average embeddings\n",
-    "    df_avg = df.groupby(\"gene\")[embedding_cols].mean().reset_index()\n",
+    "    df_avg = df.groupby(\"id\")[embedding_cols].mean().reset_index()\n",
     "    treatment_dfs[treatment] = df_avg"
    ]
   },
@@ -86,7 +84,7 @@
    "outputs": [],
    "source": [
     "# Get only genes common to all treatments\n",
-    "common_genes = set.intersection(*[set(df[\"gene\"]) for df in treatment_dfs.values()])\n",
+    "common_genes = set.intersection(*[set(df[\"id\"]) for df in treatment_dfs.values()])\n",
     "print(f\"✅ Found {len(common_genes)} common genes across treatments\")"
    ]
   },
@@ -98,10 +96,10 @@
    "outputs": [],
    "source": [
     "for treatment, df_avg in treatment_dfs.items():\n",
-    "    df_avg = df_avg[df_avg[\"gene\"].isin(common_genes)].reset_index(drop=True)\n",
+    "    df_avg = df_avg[df_avg[\"id\"].isin(common_genes)].reset_index(drop=True)\n",
     "    embedding_cols = df_avg.columns[1:]\n",
     "\n",
-    "    gene_names = df_avg[\"gene\"].tolist()\n",
+    "    gene_names = df_avg[\"id\"].tolist()\n",
     "    emb_matrix = df_avg[embedding_cols].values\n",
     "    distance_matrix = cosine_distances(emb_matrix)\n",
     "\n",
@@ -242,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cm4ai-if",
+   "display_name": "cm4ai-if-tutorial",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
