--- a/src/eda.ipynb
+++ b/src/eda.ipynb
@@ -104,7 +104,8 @@
     "\n",
     "            content_url = entry.get(\"contentUrl\", \"\")\n",
     "            filename = os.path.basename(content_url.replace(\"file://\", \"\")).strip(\"/\")\n",
-    "            if not filename.endswith(\".jpg\"):\n",
+    "            \n",
+    "            if not filename.endswith(\".jpg\") or \"blue_red_green\" in filename:\n",
     "                continue\n",
     "\n",
     "            base_id = filename.replace(\".jpg\", \"\").rsplit(\"_\", 1)[0]\n",
@@ -442,6 +443,14 @@
     "plt.title(\"Mean Channel Intensity by Treatment\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d467ebd8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -460,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
